--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   },
   "devDependencies": {
     "chokidar": "^2.0.4",
-    "lerna": "^3.4.3",
-    "npm-run-all": "^4.1.3"
+    "lerna": "^3.4.3"
   }
 }
