--- a/packages/bsify/.babelrc
+++ b/packages/bsify/.babelrc
@@ -1,11 +1,8 @@
-{
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "useBuiltIns": "usage",
-          "loose" : true
-        }
-      ]
-    ]
-  }
+{ 
+  "presets": [[
+    "@babel/preset-env", {
+      "useBuiltIns": "usage",
+      "loose" : true
+    }]
+  ]
+}
