--- a/packages/holvi/package.json
+++ b/packages/holvi/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bsify",
-  "version": "0.0.1-develop.9",
-  "description": "Utility library for wrapping bootstrap 4 components.",
+  "name": "holvi",
+  "version": "0.0.1-develop.1",
+  "description": "IndexedDB-servicecache library.",
+  "main": "dist/holvi.min.js",
   "files": [
     "dist",
     "src"
   ],
-  "main": "dist/bsify.min.js",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
@@ -16,8 +16,10 @@
     "url": "git+https://github.com/ptahv/roids.git"
   },
   "keywords": [
-    "bootstrap",
-    "react"
+    "api",
+    "service",
+    "cache",
+    "indexeddb"
   ],
   "author": "Petri Tahvanainen",
   "license": "MIT",
@@ -25,23 +27,18 @@
     "url": "https://github.com/ptahv/roids/issues"
   },
   "homepage": "https://github.com/ptahv/roids#readme",
-  "peerDependencies": {
-    "bootstrap": "^4.1.3"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "react": "^16.3.0"
-  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
     "rollup": "^0.67.1",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^3.0.0"
   },
-  "gitHead": "22dd3d1428a4a117c737418acdc3ecb912cbd3e5"
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "localforage": "^1.7.3"
+  }
 }
