--- a/packages/kontti/package.json
+++ b/packages/kontti/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "komponents",
-  "version": "0.0.1-develop.2",
-  "description": "React-component library.",
-  "main": "dist/komponents.min.js",
+  "name": "kontti",
+  "version": "3.1.0-develop.0",
+  "description": "React viewmodel library",
+  "main": "dist/kontti.min.js",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build",
-    "start": "start-storybook -p 9001 -c .storybook",
-    "build-storybook": "build-storybook -c .storybook"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,8 +17,9 @@
   },
   "keywords": [
     "react",
-    "component",
-    "components"
+    "state",
+    "model",
+    "viewmodel"
   ],
   "author": "Petri Tahvanainen",
   "license": "MIT",
@@ -28,32 +27,22 @@
     "url": "https://github.com/ptahv/roids/issues"
   },
   "homepage": "https://github.com/ptahv/roids#readme",
-  "peerDependencies": {
-    "react-virtualized": "9.19.1"
-  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/react": "^4.0.6",
-    "babel-loader": "^8.0.4",
     "rollup": "^0.67.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^3.0.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "bootstrap": "^4.1.3",
-    "bsify": "^0.0.1-develop.9",
-    "css-loader": "^1.0.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-virtualized": "^9.21.0"
-  },
-  "gitHead": "22dd3d1428a4a117c737418acdc3ecb912cbd3e5"
+    "lodash": "^4.17.10",
+    "react": "^16.3.0",
+    "striimi": "^2.0.1"
+  }
 }
