--- a/packages/striimi/package.json
+++ b/packages/striimi/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bsify",
-  "version": "0.0.1-develop.9",
-  "description": "Utility library for wrapping bootstrap 4 components.",
+  "name": "striimi",
+  "version": "2.0.2",
+  "description": "Streaming library.",
+  "main": "dist/striimi.min.js",
   "files": [
     "dist",
     "src"
   ],
-  "main": "dist/bsify.min.js",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
@@ -15,33 +15,23 @@
     "type": "git",
     "url": "git+https://github.com/ptahv/roids.git"
   },
-  "keywords": [
-    "bootstrap",
-    "react"
-  ],
   "author": "Petri Tahvanainen",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ptahv/roids/issues"
   },
   "homepage": "https://github.com/ptahv/roids#readme",
-  "peerDependencies": {
-    "bootstrap": "^4.1.3"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "react": "^16.3.0"
-  },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
     "rollup": "^0.67.1",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^3.0.0"
   },
-  "gitHead": "22dd3d1428a4a117c737418acdc3ecb912cbd3e5"
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0"
+  }
 }
