--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "watch": "node ./scripts/watch.js"
+    "watch": "node ./scripts/watch.js",
+    "build": "node ./scripts/build.js"
   },
   "devDependencies": {
     "chokidar": "^2.0.4",
