--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "root",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "watch": "node ./scripts/watch.js",
     "build": "node ./scripts/build.js"
