--- a/packages/bsify/package.json
+++ b/packages/bsify/package.json
@@ -26,16 +26,16 @@
   },
   "homepage": "https://github.com/ptahv/roids#readme",
   "peerDependencies": {
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "react": "^16.3.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "react": "^16.3.0"
+    "@babel/polyfill": "^7.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-env": "^7.1.6",
     "rollup": "^0.67.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
