--- a/packages/komponents/package.json
+++ b/packages/komponents/package.json
@@ -29,12 +29,15 @@
   },
   "homepage": "https://github.com/ptahv/roids#readme",
   "peerDependencies": {
-    "react-virtualized": "9.19.1"
+    "bootstrap": "^4.1.3",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-virtualized": "^9.21.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "@storybook/react": "^4.0.6",
     "babel-loader": "^8.0.4",
@@ -44,16 +47,16 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-terser": "^3.0.0"
+    "rollup-plugin-terser": "^3.0.0",
+    "css-loader": "^1.0.1",
+    "bootstrap": "^4.1.3",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-virtualized": "^9.21.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "bootstrap": "^4.1.3",
-    "bsify": "^0.0.1-develop.9",
-    "css-loader": "^1.0.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-virtualized": "^9.21.0"
+    "bsify": "^0.0.1-develop.9"
   },
   "gitHead": "22dd3d1428a4a117c737418acdc3ecb912cbd3e5"
 }
