--- a/packages/striimi/.babelrc
+++ b/packages/striimi/.babelrc
@@ -1,8 +1,7 @@
 {
     "presets": [[
         "@babel/preset-env", {
-            "useBuiltIns": "usage",
-            "loose" : true
+            "useBuiltIns": "usage"
         }]
     ]
 }
