--- a/packages/kontti/package.json
+++ b/packages/kontti/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kontti",
-  "version": "3.0.1",
+  "version": "3.1.0-develop.0",
   "description": "React viewmodel library",
   "main": "dist/kontti.min.js",
   "files": [
@@ -29,11 +29,10 @@
   "homepage": "https://github.com/ptahv/roids#readme",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "striimi": "^2.0.1"
+    "striimi": "^2.1.0-develop.0"
   },
   "peerDependencies": {
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
+    "react": "^16.6.3",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
@@ -42,7 +41,6 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
     "rollup": "^0.67.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
