--- a/packages/striimi/package.json
+++ b/packages/striimi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "striimi",
-  "version": "2.0.2",
+  "version": "2.1.0-develop.0",
   "description": "Streaming library.",
   "main": "dist/striimi.min.js",
   "files": [
